<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewSetPoint"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/set_point_deg"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarSetPoint"
        android:valueFrom="-20.0"
        android:valueTo="20.0"
        android:stepSize="0.1"
        android:value="2.8"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetPoint"/>

    <TextView
        android:id="@+id/textViewTiltP"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/tilt_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarSetPoint" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarTiltP"
        android:valueFrom="-40.0"
        android:valueTo="0.0"
        android:stepSize="0.1"
        android:value="-24.0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTiltP" />

    <TextView
        android:id="@+id/textViewTiltD"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/tilt_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTiltP" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarTiltD"
        android:valueFrom="0.0"
        android:valueTo="4.0"
        android:stepSize="0.01"
        android:value="1.00"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTiltD" />

    <TextView
        android:id="@+id/textViewWheelSpeedP"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/speed_p"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTiltD" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarWheelSpeedP"
        android:valueFrom="-20.0"
        android:valueTo="20.0"
        android:stepSize="0.01"
        android:value="0.40"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWheelSpeedP" />

    <TextView
        android:id="@+id/textViewExponentialWeight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/expWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarWheelSpeedP" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarExponentialWeight"
        android:valueFrom="0.0"
        android:valueTo="1.0"
        android:stepSize="0.001"
        android:value="0.25"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewExponentialWeight" />

    <TextView
        android:id="@+id/textViewMaxAbsTilt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/maximum_absolute_tilt_angle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarExponentialWeight" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBarMaxAbsTilt"
        android:valueFrom="-20.0"
        android:valueTo="20.0"
        android:stepSize="0.1"
        android:value="6.5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxAbsTilt" />


</androidx.constraintlayout.widget.ConstraintLayout>